--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.9",
     "app-route": "PolymerElements/app-route#^0.9.2",
     "app-layout": "PolymerElements/app-layout#^0.10.4",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "paper-input": "PolymerElements/paper-input#^1.1.20"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
